--- a/src/components/ui/UserForm/UserForm.module.scss
+++ b/src/components/ui/UserForm/UserForm.module.scss
@@ -8,8 +8,112 @@
     align-items: center;
 };
 
+.basic__infoNameContainer{
+    margin-bottom: 14px;
+};
+
+.basic__infoName{
+    & label {
+    font-weight: 400;
+    line-height: 1.3;
+    font-size: 12px;
+    color: $lonely-gray;
+        }
+    
+    & input {
+    margin-top: 4px;
+    margin-bottom: 14px;
+    width: 100%;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.3;
+    color: $snow-white;
+        }
+};
+
+.basic__infoMail{
+
+    & label{
+    font-weight: 400;
+    line-height: 1.3;
+    font-size: 12px;
+    color: $lonely-gray;
+    }
+    
+    & input {
+    margin-top: 4px;
+    width: 100%;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.2;
+    color: $lonely-gray;
+    }
+};
+
+.basic__info{
+    & label {
+        font-weight: 400;
+        line-height: 1.3;
+        font-size: 12px;
+        color: $lonely-gray;
+        }
+    
+        & input {
+        margin-top: 4px;
+        height: 46px;
+        width: 160px;
+        }
+};
+
+.basic__infoInputContainer{
+    display: flex;
+    flex-wrap: wrap;
+};
+
+.basic__info {
+    margin-right: 14px;
+    margin-bottom: 36px;
+
+    &:nth-child(2n) {
+        margin-right: 0;
+    }
+};
+
+.basic__calendary{
+    margin-top: 17px;
+    height: 46px;
+    width: 160px;
+};
+
+.blood__containerParent{
+    display: flex;
+
+    & label {
+            font-weight: 400;
+            line-height: 1.3;
+            font-size: 12px;
+            color: $lonely-gray;
+        }
+}
+
 .blood__container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    & label {
+            display: flex;
+            justify-content: center;
+                align-items: center;
+                
+        }
+}
+
+.circle{
+    font-weight: 400;
+        line-height: 1.3;
+        font-size: 12px;
+        color: $lonely-gray;
+        height: 18px;
 }
 
 .sex__container{
