--- a/src/components/pages/ProductsPage/Products/Products.modules.scss
+++ b/src/components/pages/ProductsPage/Products/Products.modules.scss
@@ -5,6 +5,11 @@
 
 .products
 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 375px;
     padding: 40px 20px 80px 20px;
     &_title 
     {
@@ -25,6 +30,7 @@
         border: 1px solid rgba(239, 237, 232, 0.30);
         background: $darkness-main-black;
         margin-bottom: 16px;
+        background: transparent;
     }
     &_search::placeholder,
     &_categories::placeholder,
@@ -51,6 +57,7 @@
         border: 1px solid rgba(239, 237, 232, 0.30);
         background: $darkness-main-black;
         margin-right: 16px;
+        background: transparent;
     }
     
     &_all
@@ -63,6 +70,7 @@
         border-radius: $main-b-radius;
         border: 1px solid rgba(239, 237, 232, 0.30);
         background: $darkness-main-black;
+        background: transparent;
     }
     &_content
     {
@@ -156,5 +164,135 @@
         overflow: hidden;
 	    text-overflow: ellipsis;
         white-space: nowrap;
+    }
+}
+
+@media screen and (min-width: 768px)
+{
+    .products
+    {
+        padding: 72px 50px 48px 32px;
+        &_items 
+        {
+            display: flex;
+            margin-bottom: 32px;
+        }
+        &_item 
+        {
+            margin-bottom: 0;
+        }
+        &_search
+        {
+            width: 236px;
+            height: 52px;
+            margin-right: 16px;
+            margin-bottom: 0;
+        }
+        &_categories
+        {
+            width: 192px;
+            height: 52px;
+        }
+        &_all 
+        {
+            width: 204px;
+            height: 52px;
+        }
+        &_inner
+        {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 32px 16px;
+
+            overflow-y: scroll;
+            flex-wrap: wrap;
+            flex-direction: row;
+            max-height: 500px;
+            padding-right: 16px;
+
+            &::-webkit-scrollbar-track 
+            {
+                background: rgba(239, 237, 232, 0.1);
+                border-radius: $main-b-radius;
+                height: 15px;
+            }
+
+            &::-webkit-scrollbar-thumb 
+            {
+                background-color: $christmas-hover-orange;
+                border-radius: $main-b-radius;
+                height: 15px;
+            }
+
+            &::-webkit-scrollbar 
+            {
+                width: 8px;
+                height: 15px;
+            }
+        }
+        &_content
+        {
+            margin-bottom: 0;
+        }
+        &__text
+        {
+            white-space: nowrap;
+        }
+        &_title
+        {
+            font-size: 32px;
+        }
+        &-title
+        {
+            font-size: 16px;
+        }
+        &_rice
+        {
+            font-size: 24px;
+            line-height: 1.3;
+        }
+    }
+}
+
+@media screen and (min-width: 1440px)
+{
+    .products
+    {
+        background-image: url('./src/assets/backImg/side-view-people-training-gym 1.jpg');
+        background-repeat: no-repeat;
+        background-position: right;
+        padding: 72px 96px 81px 96px;
+        &_top 
+        {
+            display: flex;
+            align-items: center;
+            margin-bottom: 28px;
+        }
+        &_title
+        {
+            margin-right: 454px;
+            margin-bottom: 0;
+        }
+        &_items 
+        {
+            margin-bottom: 0;
+        }
+        &_inner
+        {
+            margin-right: 435px;
+        }
+        &_content
+        {
+            width: 405px;
+            height: 141px;
+        }
+        &-item
+        {
+            margin-right: 160px;
+        }
+        &_rice
+        {
+            width: 333px;
+        }
     }
 }
