--- a/src/components/pages/ExercisesPage/ExercisesPage.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesPage.module.scss
@@ -1,24 +1,22 @@
-@import '../../../scss/variables';
-@import '../../../scss/colors';
-@import '../../../scss/mixins';
-
-.section {
-    @include container();
+.exercises__categories {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 320px;
     padding-top: 40px;
 };
 
 @media screen and (min-width: 375px) {
-    .section {
+    .exercises__categories {
         width: 100%;
-        display: flex;
+flex-direction: row;
         justify-content: space-between;
         align-items: center;
     }
 };
 
 @media screen and (min-width: 768px) {
-    .section {
+    .exercises__categories {
         padding-top: 72px;
         margin-bottom: 64px;
     }
