--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -1,9 +1,6 @@
-.form_group {
-
-};
-
 .dropdown {
     position: relative;
+   
 }
 
 .dropdown_button {
@@ -40,7 +37,7 @@ cursor: pointer;
 
 .dropdown_list {
    
-   display: flex;
+    display: flex;
     position: absolute;
     left: 0;
     top: 52px;
@@ -48,20 +45,32 @@ cursor: pointer;
     
     flex-direction: column;
     gap: 8px;
-    width: 146px;
+    width: 100%;
     height: 228px;
    background-color: #1C1C1C;
    color: #EFEDE8;
    border-radius: 12px;
    padding: 14px 32px 14px 14px;
 
-    overflow:hidden;
+    overflow-x: hidden;
+        overflow-y: scroll;
 
    z-index: 1;
 };
 .dropdown_list_visible {
     display: none;
-}
+};
+
+.dropdown_list::-webkit-scrollbar {
+    width: 8px;
+    height: 147px;
+   margin-right: 7px;
+ 
+};
+.dropdown_list::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    background-color:#EFEDE81A;
+};
 
 .dropdown_item {
     color: #EFEDE8;
