--- a/src/components/ui/UserForm/UserForm.module.scss
+++ b/src/components/ui/UserForm/UserForm.module.scss
@@ -2,7 +2,6 @@
 @import '../../../scss/mixins';
 
 .UserFrom__container{
-    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,6 +50,7 @@
 };
 
 .basic__info{
+
     & label {
         font-weight: 400;
         line-height: 1.3;
@@ -87,6 +87,8 @@
 
 .blood__containerParent{
     display: flex;
+    align-items: flex-end;
+    margin-bottom: 40px;
 
     & label {
             font-weight: 400;
@@ -94,36 +96,69 @@
             font-size: 12px;
             color: $lonely-gray;
         }
-}
+};
 
 .blood__container{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 8px;
+    margin-top: 4px;
+
     & label {
             display: flex;
             justify-content: center;
-                align-items: center;
-                
+            align-items: center;
         }
-}
+
+        & input[type="radio"] {
+            margin: 0;
+            padding: 0;
+            width: 20px;
+            height: 20px;
+        }   
+};
 
 .circle{
     font-weight: 400;
-        line-height: 1.3;
-        font-size: 12px;
-        color: $lonely-gray;
-        height: 18px;
-}
+    line-height: 1.3;
+    font-size: 12px;
+    color: $lonely-gray;
+    margin-left: 8px;
+};
 
 .sex__container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-left: 20px;
 };
 
 .sex__label{
     display: flex;
+    align-items: center;
+
+    & input {
+        margin: 0;
+        padding: 0;
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.levelActivity__container{
+margin-bottom: 40px;
 }
 
 .levelActivity__label{
     display: flex;
+    margin-bottom: 8px;
+
+    & input {
+        margin: 0;
+        padding: 0;
+        min-width: 20px;
+        min-height: 20px;
+    }
 }
