styles UserForm&UserCard

--- a/src/components/UserCard/UserCard.module.scss
+++ b/src/components/UserCard/UserCard.module.scss
@@ -4,6 +4,11 @@
 .usercard__container{
     display: flex;
     justify-content: center;
+
+    @media(min-width: 1440px){
+     margin-left: 50px;
+    }
+    
 };
 
 .container__svg{
