--- a/src/components/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/ProductsFilters/ProductsFilters.module.scss
@@ -27,6 +27,7 @@
 
 .form_container_input {
     position: relative;
+
 }
 
 .input {
@@ -61,7 +62,7 @@
     color: #EFEDE8;
     border: none;
 }
-.button_x {
+.button_close {
     position: absolute;
     top: 30%;
     right: 30px;
