--- a/src/components/pages/ExercisesPage/ExercisesPage.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesPage.module.scss
@@ -1,3 +1,9 @@
+@import '../../../scss/mixins';
+@import '../../../scss/variables';
+@import '../../../scss/colors';
+@import '../../../scss/reset';
+
+
 .exercises__categories {
     display: flex;
     flex-direction: column;
@@ -20,4 +26,104 @@ flex-direction: row;
         padding-top: 72px;
         margin-bottom: 64px;
     }
-    };
+};
+// ====================================================================
+.container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 375px;
+    padding: 10px 20px 80px 20px;
+    &_icon 
+    {
+        display: flex;
+        margin-bottom: 12px;
+    }
+    &_icon p 
+    {
+        color: rgba(239, 237, 232, 0.40);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 1.28;
+        margin-left: 8px;
+    }
+    &_title 
+    {
+        color: $snow-white;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1.16;
+        margin-bottom: 20px;
+    }
+    &_box
+    {
+        display: flex;
+        gap: 28px;
+        margin-bottom: 8px;
+        position: relative;
+    }
+    &_box::after 
+    {
+        content: "";
+        position: absolute;
+        width: 68px;
+        height: 4px;
+        bottom: -8px;
+        border-radius: 2px;
+        background: $christmas-hover-orange;
+    }
+    &_box p 
+    {
+        color: rgba(239, 237, 232, 0.40);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 1.28;
+    }
+}
+
+@media screen and (min-width: 768px)
+{
+    .container
+    {
+        padding: 32px 32px 66px 32px;
+        &_block 
+        {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 32px;
+        }
+        &_title
+        {
+            font-size: 32px;
+            margin-bottom: 0;
+        }
+        &_box
+        {
+            align-items: end;     
+        }
+        &_box::after
+        {
+            content: '';
+            width: 77px;
+        }
+        &_icon p
+        {
+            font-size: 16px;
+        }
+        &_box p
+        {
+            font-size: 16px;
+        }
+    }
+}
+@media screen and (min-width: 1440px)
+{
+    .container
+    {
+        padding: 32px 96px 81px 96px;
+        background-image: url('./src/assets/backImg/side-view-people-training-gym 1-desk-min.jpg');
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+}
