--- a/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
@@ -12,26 +12,23 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 40px;
-   
 
     @media screen and (min-width: 768px) {
         width: 868px;
         flex-wrap: none;
-        }
+    }
 
     @media screen and (min-width: 1440px) {
-           width: 1440;
-        }
-
-};
+        width: 1440;
+    }
+}
 
 .form_container_input {
     position: relative;
-
 }
 
 .input {
-    color:#EFEDE8;
+    color: #efede8;
     padding: 14px;
     background-color: transparent;
     outline: none;
@@ -40,18 +37,17 @@
     border-radius: 12px;
     border: 1px solid#EFEDE84D;
 
-    &:hover{
-        border-color: #E6533C;
-    };
+    &:hover {
+        border-color: #e6533c;
+    }
     &:focus {
-        border-color: #E6533C;
+        border-color: #e6533c;
     }
 
     @media screen and (min-width: 768px) {
-            width: 236px;
-           
-        }
-};
+        width: 236px;
+    }
+}
 
 .button_form {
     position: absolute;
@@ -59,7 +55,7 @@
     right: 5px;
     transform: translate(-30%);
     background-color: transparent;
-    color: #EFEDE8;
+    color: #efede8;
     border: none;
 }
 .button_close {
@@ -68,7 +64,7 @@
     right: 30px;
     transform: translate(-30%);
     background-color: transparent;
-    color: #EFEDE8;
+    color: #efede8;
     border: none;
     cursor: pointer;
 }
