--- a/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
+++ b/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
@@ -6,59 +6,56 @@
     width: 335px;
     height: 141px;
     border-radius: 12px;
-    border: 1px solid #EFEDE833 ;
+    border: 1px solid #efede833;
     padding: 16px;
-    background-color: #EFEDE833;
-};
+    background-color: #efede833;
+}
 .item_container {
     display: flex;
     align-items: center;
     margin-bottom: 35px;
-    
-};
+}
 
 .diet {
     width: 41px;
     height: 24px;
     border-radius: 4px;
-    background-color: #EFEDE80D;
+    background-color: #efede80d;
     padding: 5px 7.5px;
     font-weight: 700;
     font-size: 12px;
     line-height: 14px;
-};
+}
 
 .button_container {
     display: flex;
     margin-left: auto;
     align-items: center;
     gap: 16px;
-};
+}
 
 .text {
-    color: #EFEDE8;
+    color: #efede8;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.5;
-};
+}
 
-.button {  
+.button {
     display: flex;
-    color: #E6533C;
+    color: #e6533c;
     background-color: transparent;
     border: none;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.3;
-   
-
-};
+}
 
 .title_container {
     display: flex;
     gap: 16px;
     margin-bottom: 8px;
-};
+}
 
 .title {
     font-weight: 400;
@@ -66,16 +63,14 @@
     line-height: 1.2;
 }
 
-
 .item_list_container {
     display: flex;
     gap: 16px;
 
     & p {
-        color: #EFEDE866;
+        color: #efede866;
         font-weight: 400;
         font-size: 12;
         line-height: 1.5;
     }
-
-};
+}
