--- a/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
+++ b/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     column-gap: 13px;
     row-gap: 20px;
+    justify-content: center;
 
     @media screen and (min-width: 768px) {
         column-gap: 16px;
