--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -154,3 +154,8 @@ button {
 *::after {
     box-sizing: border-box;
 }
+
+input[type=file],
+input[type=file]::-webkit-file-upload-button {
+    cursor: pointer;
+}
