refactoring(ProfilePage): fix styles, validation.

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -14,6 +14,7 @@ $santas-node-red: #d80027;
 $silent-gray: #303030;
 $lonely-gray: #efede899; // 60%
 $lonely-modal-gray: #efede833; //20%
+$smoke-gay: #636366;
 
 $calendar-white: rgba(239, 237, 232, 1);
 $snow-alpha-white: #efede84d; // 30%
