--- a/src/components/ui/UserForm/UserForm.module.scss
+++ b/src/components/ui/UserForm/UserForm.module.scss
@@ -7,10 +7,6 @@
     justify-content: center;
     align-items: center;
 
-    @media (min-width:768px) {
-           margin-top: 38px;
-        }
-
     @media(min-width: 1440px) {
           margin-right: 50px;
         }
@@ -30,7 +26,6 @@
 };
 
 .basic__infoName{
-
     & label {
     font-weight: 400;
     line-height: 1.3;
@@ -78,58 +73,44 @@
 };
 
 .basic__info{
+    max-width: 160px;
 
     & label {
         font-weight: 400;
         line-height: 1.3;
         font-size: 12px;
         color: $lonely-gray;
-        }
+    }
     
-        & input {
+    & input {
         margin-top: 4px;
         height: 46px;
         width: 160px;
-        }
+    }
 };
 
 .basic__infoInputContainer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 12px;
 
     @media screen and (max-width: 767px) {
         max-width: 335px;
     }
 };
 
-.basic__info {
-    margin-right: 14px;
-    margin-bottom: 36px;
-
-    @media(max-width: 767px) {
-        &:nth-child(2n) {
-            margin-right: 0;
-            }
-        }
-
-    @media(min-width: 768px) {
-        &:last-child {
-            margin-right: 0;
-            }
-       } 
-};
-
 .basic__calendary{
-    margin-top: 17px;
     height: 46px;
     width: 160px;
 };
 
 .blood__containerParent{
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     margin-bottom: 40px;
+    justify-content: space-between;
+    max-width: 320px;
 
     @media(min-width:768px){
         margin-bottom: 32px;
@@ -177,7 +158,8 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    margin-left: 20px;
+    margin-top: 21px;
+    max-height: fit-content
 };
 
 .sex__label{
@@ -199,6 +181,7 @@
 .levelActivity__label{
     display: flex;
     margin-bottom: 8px;
+    align-items: center;
 
     & input {
         margin: 0;
@@ -215,13 +198,11 @@
         'liga' off;
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.15;
     letter-spacing: 0.12px;
 
     display: flex;
     align-items: stretch;
-
-    margin-bottom: 14px;
 }
 
 .successLabel {
@@ -236,8 +217,6 @@
 
     display: flex;
     align-items: stretch;
-
-    margin-bottom: 14px;
 }
 
 .input {
@@ -254,7 +233,7 @@
 
     max-width: 364px;
 
-    margin-bottom: 18px;
+    margin-bottom: 12px;
 
     padding: 14px;
 
@@ -294,5 +273,58 @@
 
             margin-bottom: 20px;
         }
+    }
+}
+
+
+.radioBtn {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+}
+
+.customRadioBtn {
+    display: inline-block;
+    min-width: 20px;
+    min-height: 20px;
+    background-color: transparent;
+    border: 2px solid $smoke-gay;
+    border-radius: 50%;
+    position: relative;
+}
+
+.radioBtn:checked+.customRadioBtn {
+    border-color: $christmas-hover-orange;
+}
+
+.radioBtn:checked+.customRadioBtn::before {
+    content: '';
+    position: absolute;
+    min-width: 10px;
+    min-height: 10px;
+    background-color: $christmas-hover-orange;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sex {
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__checkbox-wrapper {
+        display: flex;
+        margin-bottom: 8px;
+        gap: 8px;
     }
 }
