--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
@@ -12,7 +12,8 @@
         font-weight: 400;
         line-height: 1.29; /* 128.571% */
     }
-    };
+};
+.active {background-color: aqua}
 
 @media screen and (min-width: 768px) {
 .category__list{
