styles(ExercisesPage): add styles

--- a/src/components/pages/ExercisesPage/ExercisesPage.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesPage.module.scss
@@ -1,3 +1,7 @@
+.exercises{
+    position: relative;
+};
+
 .exercises__categories {
     display: flex;
     flex-direction: column;
@@ -6,18 +10,55 @@
     padding-top: 40px;
 };
 
+.exercises__button_back {
+    display: flex;
+    position: absolute;
+    top:10px;
+    gap: 8px;
+
+    & svg use{
+        stroke: #EFEDE866;
+    };
+
+    & p{
+        color: rgba(239, 237, 232, 0.40);
+
+        font-family: Roboto;
+        font-size: 14px;
+        line-height: 1.29; /* 128.571% */
+    };
+};
+
 @media screen and (min-width: 375px) {
     .exercises__categories {
         width: 100%;
-flex-direction: row;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
-    }
+    };
 };
 
 @media screen and (min-width: 768px) {
     .exercises__categories {
         padding-top: 72px;
-        margin-bottom: 64px;
-    }
+        padding-bottom: 64px;
     };
+
+    .exercises__button_back {
+        top:32px;
+    };
+};
+
+@media screen and (min-width: 1440px){
+    .exercises{
+        overflow-y: hidden;
+    };
+
+    .exercises__categories {
+        padding-bottom: 32px;
+    };
+
+    .exercises__button_back {
+        top:36px;
+    };
+};
