--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
@@ -8,12 +8,9 @@
     
         font-family: Roboto;
         font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
         line-height: 1.29; /* 128.571% */
-    }
+    };
 };
-.active {background-color: aqua}
 
 @media screen and (min-width: 768px) {
 .category__list{
@@ -22,6 +19,6 @@
     & li a span{
         font-size: 16px;
         line-height: 1.5; /* 150% */
-    }
+    };
     };
 };
