--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.scss
@@ -1,17 +1,18 @@
+@import '../../../../scss/colors';
+@import '../../../../scss/mixins';
+@import '../../../../scss/variables';
+ 
  li a {
     text-decoration: none;
-
     color: rgba(239, 237, 232, 0.40);
 
     font-family: Roboto;
     font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 1.29; /* 128.571% */
     position: relative;
 
     &.active span {
-        color: #EFEDE8;
+        color: $snow-white;
         
         &::before {
             content: '';
@@ -21,15 +22,15 @@
             width: 100%;
             height: 4px;
             border-radius: 2px;
-            background: #EF8964;
+            background: $christmas-hover-orange;
             bottom: -4px;
-        }
-    }
-}
+        };
+    };
+};
 
-    @media screen and (min-width: 768px) {
-        a{
-                font-size: 16px;
-                line-height: 1.5; /* 150% */
-    }
-    }
+@media screen and (min-width: 768px) {
+    a{
+        font-size: 16px;
+        line-height: 1.5; /* 150% */
+    };
+};
