--- a/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
@@ -3,27 +3,8 @@
 @import '../../../../scss/variables';
 
 .exercises__container{
-    @include container();
-}
-
-.exercises__button_back {
-    display: flex;
-    gap: 8px;
-
-    & svg use{
-        stroke: #EFEDE866;
-    }
-
-    & p{
-        color: rgba(239, 237, 232, 0.40);
-
-        font-family: Roboto;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.29; /* 128.571% */
-    }
-}
+    padding-top: 40px;
+};
 
 .exercises_ul_collections {
     display: flex;
@@ -31,69 +12,152 @@
     margin: 0 auto;
     max-width: 335px;
     gap: 20px;
+};
 
-}
+.exercises__item{
+    position: relative;
+    padding: 16px;
+    flex-shrink: 0;
+    border-radius: $main-b-radius;
+    border: 1px solid rgba(239, 237, 232, 0.20);
+    background: rgba(239, 237, 232, 0.05);
 
-.exercises_container{
-padding: 16px;
-flex-shrink: 0;
-border-radius: 12px;
-border: 1px solid rgba(239, 237, 232, 0.20);
+    & .exercises__item_head{
+        color: #FFF;
 
-background: rgba(239, 237, 232, 0.05);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+
+        display: inline-flex;
+        padding: 5px 7.5px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 4px;
+        background: rgba(239, 237, 232, 0.05);
+        margin-bottom: 33px;
+    };
 
     & button{
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        display: inline-flex;
+        align-self: flex-end;
+        gap: 8px;
         color: $christmas-main-orange;
 
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.29; /* 128.571% */
-
-padding: 0;
-border: 0;
-background-color: transparent;
-margin-bottom: 41px;
-
-margin-right: 0;
-    }
+        font-family: Roboto;
+        font-size: 14px;
+        line-height: 1.29; /* 128.571% */
+        padding: 0;
+        border: 0;
+        background-color: transparent;
+    };
 
     & h3{
         color: $snow-white;
 
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: Roboto;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.2; /* 120% */
-margin-bottom: 8px;
-    }
-}
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-size: 20px;
+        line-height: 1.2; /* 120% */
+        margin-bottom: 8px;
+
+        width: 240px;
+        overflow:hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        svg{
+            margin-right: 16px;
+        };
+    };
+};
 
 .exercises_info{
-display: block;
-
+    display: block;
 
     & p{
         display: inline-block;
         color: rgba(239, 237, 232, 0.40);
 
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Roboto;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5; /* 150% */
-    margin-right: 16px;
-    }
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-family: Roboto;
+        font-size: 12px;
+        line-height: 1.5; /* 150% */
+        margin-right: 16px;
+    };
 
     & p:last-child {
         margin-right: 0;
-      }
+    };
 
     & span{
         color: $snow-white;
-    }
-}
+    };
+};
+
+@media screen and (min-width: 768px) {
+.exercises__container{
+    padding: 0;
+    width: 704px;
+    margin: 0 auto;
+    height: 726px;
+    overflow-y: hidden;
+    overflow-y: scroll;
+};
+
+.exercises_ul_collections {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 768px;
+    row-gap: 32px;
+    column-gap: 16px;
+
+    & .exercises__item{
+        width: 335px;
+
+        & .exercises__item_head{
+            margin-bottom: 25px;
+        };
+
+        & button{
+            font-size: 16px;
+            line-height: 1.5; /* 150% */
+            align-items: center;
+        };
+
+        & h3{
+            font-size: 24px;
+            line-height: 1.33; /* 133.333% */
+        };
+    };
+};
+};
+
+@media screen and (min-width: 1440px) {
+    .exercises__container{
+        width: 850px;
+        height: 487px;
+        margin: 0;
+    };
+
+    .exercises_ul_collections {
+        max-width: 1440px;
+        justify-content: left;
+
+        & .exercises__item{
+            width: 405px;
+
+            & .exercises__item_head{
+                margin-bottom: 27px;
+            }
+        };
+        & h3{
+            width: 373px;
+        };
+    };
+};
