--- a/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
@@ -11,16 +11,16 @@
     gap: 16px;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
    
 
     @media screen and (min-width: 768px) {
-        width: 868px;
+        width: 768px;
         flex-wrap: none;
         }
 
     @media screen and (min-width: 1440px) {
-           width: 1440;
+           width: 1440px;
         }
 
 };
@@ -49,6 +49,7 @@
 
     @media screen and (min-width: 768px) {
             width: 236px;
+            height: 52px;
            
         }
 };
@@ -56,7 +57,7 @@
 .button_form {
     position: absolute;
     top: 30%;
-    right: 5px;
+    right: 0;
     transform: translate(-30%);
     background-color: transparent;
     color: #EFEDE8;
@@ -65,7 +66,7 @@
 .button_close {
     position: absolute;
     top: 30%;
-    right: 30px;
+    right: 25px;
     transform: translate(-30%);
     background-color: transparent;
     color: #EFEDE8;
