--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -15,6 +15,15 @@ border-radius: 12px;
 border: 1px solid#EFEDE84D;
 text-align: left;
 cursor: pointer;
+ 
+@media screen and (min-width: 768px) {
+    width: 192px;
+    height: 52px;
+    }
+
+    @media screen and (min-width: 1440px) {
+     
+    }
 
 };
 
@@ -46,11 +55,11 @@ cursor: pointer;
     flex-direction: column;
     gap: 8px;
     width: 100%;
-    height: 228px;
+   height: 228px;
    background-color: #1C1C1C;
    color: #EFEDE8;
    border-radius: 12px;
-   padding: 14px 32px 14px 14px;
+   padding: 14px 19px 14px 14px;
 
     overflow-x: hidden;
         overflow-y: scroll;
@@ -77,6 +86,12 @@ cursor: pointer;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.3;
+    @media screen and (min-width: 768px) {
+        font-size: 16px;
+        line-height: 1.5;
+        }
+    
+        @media screen and (min-width: 1440px) {}
 };
 
 .dropdown_input {
