--- a/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
@@ -11,7 +11,7 @@
     gap: 16px;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 40px;
+    padding-top: 40px;
    
 
     @media screen and (min-width: 768px) {
@@ -21,6 +21,7 @@
 
     @media screen and (min-width: 1440px) {
            width: 1440px;
+           padding-top: 0;
         }
 
 };
