--- a/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
+++ b/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px ;
+    margin-top: 40px;
 
     @media screen and (min-width: 768px) {
             width: 776px;
@@ -26,6 +27,9 @@
     @media screen and (min-width: 1440px) {
             width: 850px;
             padding: 0;
+            margin-left: 0;
+            height: 487px;
+            margin-top: 0;
         };
 };
 
