--- a/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
+++ b/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
@@ -10,7 +10,7 @@
     height: auto;
     font-size: 14px;
     line-height: 1.3;
-    color: #E6533C;
+    color: $christmas-main-orange;
     padding-top: 64px;
 
     & span {
@@ -32,9 +32,9 @@
     width: 335px;
     height: 141px;
     border-radius: 12px;
-    border: 1px solid #EFEDE833 ;
+    border: 1px solid $lonely-modal-gray ;
     padding: 16px;
-    background-color: #EFEDE833;
+    background-color: $darkness-modal-black;
 
 
     @media screen and (min-width: 768px) {
