--- a/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
+++ b/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     gap: 20px ;
     margin-top: 40px;
+    margin-bottom: 80px;
 
     @media screen and (min-width: 768px) {
             width: 776px;
@@ -20,7 +21,7 @@
             overflow-x: hidden;
             overflow-y: scroll;
             gap: 0;
-
+            margin-bottom: 48px;
             
         };
 
@@ -30,6 +31,7 @@
             margin-left: 0;
             height: 487px;
             margin-top: 0;
+            margin-bottom: 81px;
         };
 };
 
