--- a/src/components/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/components/pages/ProductsPage/ProductsPage.module.scss
@@ -1,6 +1,8 @@
 .products_page_container {
+
+    margin-top: 40px;
     @media screen and (min-width: 768px) {
-            
+            margin-top: 70px;
         }
     
         @media screen and (min-width: 1440px) {
